# cuselfxtest

./: .gitignore  CMakeLists.txt  README.md  count.py  intersect.cuh  main.cu  selfx.cuh  setup.sh
cuselfx/: CMakeLists.txt  setup.py
cuselfx/src/: self_intersect.cuh  tri_tri_intersect.cuh
cuselfxtest/: CMakeLists.txt  selfx.cuh  setup.py  setup.sh
cuselfxtest/src/: bvh.cuh  math.cuh  self_intersect.cuh  types.cuh
include/: adj_faces.cuh  bvh.cuh  math.cuh  morton_code.cuh  query.cuh  self_intersect.cuh  tri_tri_3d_blender.cuh  tri_tri_intersect.cuh  types.cuh  types.h
